--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.68.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-image-picker": "^4.8.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^5.4.15",
